@@ -1,3 +1,8 @@
+2003-09-22  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Don't play tricks
+	like jumping over the lock prefix.
+
 2003-09-21  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/i386/lowlevellock.h: Completely revamp the
